Fixed the spacing on the loadout view

--- a/src/app/core/pages/App/App.css
+++ b/src/app/core/pages/App/App.css
@@ -15,6 +15,10 @@ section:not(:first-child) {
 	padding-bottom: 24px;
 }
 
+.separator-padding:last-child {
+	padding-bottom: 0px;
+}
+
 @media (max-width: 767px) {
 	.separator-padding {
 		padding-top: 16px;
